Updated the title of the site

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 
 title: [Slovakian Polls]
-description: [Opinion Polls for the Slovakian General Election of 2020]
+description: [Opinion Polls for the Next Slovakian General Election]
 
